fix: Make selected nav item readable (regression)

--- a/_sass/metanorma-rules.scss
+++ b/_sass/metanorma-rules.scss
@@ -61,7 +61,6 @@ body > .underlay > header {
     }
     span {
       background-color: white;
-      color: $primary-color;
     }
   }
 }
